--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -65,10 +65,10 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ComplexSection.html" title="TechDraw ComplexSection/de">Komplexe Schnittansicht</a>: F&uuml;gt eine, auf einer Kontur (Schnittprofil) basierende, Schnittansicht zu einer vorhandenen Ansicht ein. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DetailView.svg&amp;filetimestamp=20241127175336&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DetailView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DetailView.html" title="TechDraw DetailView/de">Detailansicht</a>: F&uuml;gt eine Detailansicht eines Bereiches einer vorhandenen Ansicht ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectionGroup.svg&amp;filetimestamp=20240710132852&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a>: Ruft einen Dialog auf, um mehrere (zusammenh&auml;ngende) Ansichten eines Objekts aus verschiedenen Richtungen zu erstellen (Seitenansicht, Draufsicht usw.). <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ClipGroup.html" title="TechDraw ClipGroup/de">Ausschnittsgruppe einf&uuml;gen</a>: F&uuml;gt eine Ausschnittsgruppe ein.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ClipGroup.html" title="TechDraw ClipGroup/de">Ausschnittsgruppe</a>: F&uuml;gt eine Ausschnittsgruppe ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Symbol.svg&amp;filetimestamp=20240710144653&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Symbol.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Symbol.html" title="TechDraw Symbol/de">SVG-Zeichnungselement</a>: F&uuml;gt ein Symbol aus einer <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei in ein Zeichnungsblatt ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Image.svg&amp;filetimestamp=20241127175339&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Image.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Image.html" title="TechDraw Image/de">Bitmap-Grafik einf&uuml;gen</a>: F&uuml;gt ein PNG- oder JPG-<a href="../de/Bitmap.html" title="Bitmap/de">Bitmap</a>-Bild in ein Zeichnungsblatt ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ShareView.html" title="TechDraw ShareView/de">Ansicht teilen</a>: Eine Ansicht wird auf mehreren Bl&auml;ttern angezeigt (geteilt).</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Image.svg&amp;filetimestamp=20241127175339&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Image.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Image.html" title="TechDraw Image/de">Bitmap-Grafik</a>: F&uuml;gt ein PNG- oder JPG-<a href="../de/Bitmap.html" title="Bitmap/de">Bitmap</a>-Bild in ein Zeichnungsblatt ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShareView.svg&amp;filetimestamp=20240710143133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShareView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ShareView.html" title="TechDraw ShareView/de">Ansicht teilen</a>: Zeigt eine Ansicht auf mehreren Bl&auml;ttern an.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ProjectShape.html" title="TechDraw ProjectShape/de">Form projizieren</a>: Erstellt Projektionen von Formen in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a>.</li></ul>
 <p><span id="Views_From_Other_Workbenches"></span>
 </p>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210424
+Cached time: 20260111211103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.365 seconds
-Real time usage: 0.902 seconds
+CPU time usage: 0.432 seconds
+Real time usage: 0.903 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.716      1 -total
- 29.47%   10.822      1 Template:TechDraw_Tools_navi/de
- 15.67%    5.755      2 Template:Navigation_menu_2
- 14.74%    5.413      1 Template:TOCright
- 12.45%    4.570      2 Template:Docnav/de
- 10.74%    3.944      1 Template:Userdocnavi/de
- 10.37%    3.808     25 Template:Version/de
- 10.33%    3.791      5 Template:VersionPlus/de
-  4.90%    1.799      1 Template:KEY
+100.00%   30.055      1 -total
+ 33.02%    9.924      1 Template:TechDraw_Tools_navi/de
+ 15.87%    4.770      2 Template:Navigation_menu_2
+ 13.30%    3.998      1 Template:Userdocnavi/de
+ 12.96%    3.894      5 Template:VersionPlus/de
+ 11.79%    3.544     25 Template:Version/de
+ 10.81%    3.249      2 Template:Docnav/de
+  5.44%    1.636      1 Template:TOCright
+  4.28%    1.286      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111210423 and revision id 1736318. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111211102 and revision id 1736378. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
