--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -674,7 +674,7 @@
 </td></tr></tbody></table>
 <p><span id="Touchpad_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="Touchpad_Navigace">Touchpad Navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_Touchpad">Navigace Touchpad</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>With the Touchpad navigation style, panning, zooming, and rotating the view require a modifier key together with the touchpad. This style can also be used with a mouse.
 </p>
@@ -848,12 +848,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211111
+Cached time: 20260111211131
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.305 seconds
-Real time usage: 0.590 seconds
+CPU time usage: 0.306 seconds
+Real time usage: 0.436 seconds
 Preprocessor visited node count: 1468/1000000
 Post&#8208;expand include size: 71676/2097152 bytes
 Template argument size: 26611/2097152 bytes
@@ -864,19 +864,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.734      1 -total
- 14.26%   18.216      1 Template:Userdocnavi/cs
- 10.06%   12.851      8 Template:ASCII
-  6.23%    7.963      1 Template:Navigation_menu_2
-  5.93%    7.579      1 Template:SiemensNX_Navigation
-  5.89%    7.526      1 Template:MayaGesture_Navigation
-  5.84%    7.459      1 Template:Gesture_Navigation
-  5.20%    6.641      1 Template:Touchpad_Navigation
-  4.78%    6.105     69 Template:KEY
-  4.74%    6.057      1 Template:Blender_Navigation
+100.00%   69.859      1 -total
+ 11.67%    8.155      8 Template:ASCII
+  8.19%    5.720      1 Template:Userdocnavi/cs
+  8.08%    5.647     69 Template:KEY
+  7.86%    5.494      1 Template:OpenSCAD_Navigation
+  6.82%    4.764      1 Template:MayaGesture_Navigation
+  5.77%    4.033      1 Template:Blender_Navigation
+  5.50%    3.841      1 Template:OpenCascade_Navigation
+  4.68%    3.268      1 Template:OpenInventor_Navigation
+  4.63%    3.232      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211110 and revision id 1736380. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211130 and revision id 1736382. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
