--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -58,7 +58,7 @@
 <p>Das Werkzeug "TechDraw Fl&auml;chenMittellinie" f&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine_Sample.png&amp;filetimestamp=20190605114533&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine_Sample.png" decoding="async" width="400" height="252" class="mw-file-element" data-file-width="600" data-file-height="378"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mittellinie zu einer Fl&auml;che hinzuf&uuml;gen (links: Fl&auml;che ausgew&auml;hlt / rechts: Mittellinie hinzugef&uuml;gt)</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Mittellinie zu einer Fl&auml;che hinzugef&uuml;gt</p>
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
@@ -161,15 +161,15 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210917
+Cached time: 20260111211136
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.275 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.302 seconds
 Preprocessor visited node count: 409/1000000
-Post&#8208;expand include size: 29199/2097152 bytes
-Template argument size: 11302/2097152 bytes
+Post&#8208;expand include size: 29073/2097152 bytes
+Template argument size: 11239/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -177,19 +177,19 @@ Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.397      1 -total
- 22.76%   11.928      1 Template:TechDraw_Tools_navi/de
- 14.10%    7.386      2 Template:PropertyView/de
- 12.10%    6.342      2 Template:Navigation_menu_2
- 11.37%    5.957      1 Template:Version/de
- 11.26%    5.899      1 Template:Userdocnavi/de
- 10.27%    5.381      2 Template:Docnav/de
-  9.21%    4.823      1 Template:KEY
-  8.58%    4.498      1 Template:GuiCommand/de
-  6.88%    3.603      2 Template:Variable
+100.00%   73.079      1 -total
+ 20.23%   14.786      1 Template:TechDraw_Tools_navi/de
+ 16.29%   11.903      2 Template:PropertyView/de
+ 13.20%    9.650      1 Template:GuiCommand/de
+ 12.08%    8.828      1 Template:Userdocnavi/de
+  9.92%    7.251      2 Template:Navigation_menu_2
+  9.06%    6.621      1 Template:Caption
+  8.12%    5.933      1 Template:Version/de
+  6.75%    4.931      2 Template:Docnav/de
+  6.48%    4.736      2 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111210916 and revision id 1736357. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211136 and revision id 1736384. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
