--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -74,7 +74,7 @@
 </p>
 <h3><span class="mw-headline" id="Ansichten_anderer_Arbeitsbereiche">Ansichten anderer Arbeitsbereiche</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ActiveView.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ActiveView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ActiveView.html" title="TechDraw ActiveView/de">Aktive (3D-)Ansicht</a>: F&uuml;gt eine Abbildung der aktiven 3D-Ansicht ein.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DraftView.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DraftView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DraftView.html" title="TechDraw DraftView/de">Objekt des Draft-Arbeitsbereiches einf&uuml;gen</a>: F&uuml;gt eine Ansicht eines Objekts aus dem Arbeitsbereich <a href="../de/Draft_Workbench.html" title="Draft Workbench/de">Draft</a> ein.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DraftView.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DraftView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DraftView.html" title="TechDraw DraftView/de">Draft-Ansicht</a>: F&uuml;gt eine Ansicht eines Objekts aus dem Arbeitsbereich <a href="../de/Draft_Workbench.html" title="Draft Workbench/de">Draft</a> ein.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ArchView.svg&amp;filetimestamp=20241127175333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ArchView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ArchView.html" title="TechDraw ArchView/de">Objekt des Arbeitsbereichs BIM einf&uuml;gen</a>: F&uuml;gt eine Ansicht eines <a href="../de/Arch_SectionPlane.html" title="Arch SectionPlane/de">Schnittebenen</a>-Objekts aus dem Arbeitsbereich <a href="../de/BIM_Workbench.html" title="BIM Workbench/de">BIM</a> ein. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenkalkulationsansicht einf&uuml;gen</a>: F&uuml;gt die Ansicht eines Tabellenblattes aus dem Arbeitsbereich  <a href="../de/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/de">Spreadsheet</a> (Tabellenkalkulation) hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Das Werkzeug <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a> kann anstatt dieses Werkzeugs verwendet werden.</li></ul>
 <p><span id="Dimensions"></span>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211103
+Cached time: 20260111211250
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.432 seconds
-Real time usage: 0.903 seconds
+CPU time usage: 0.316 seconds
+Real time usage: 0.405 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.055      1 -total
- 33.02%    9.924      1 Template:TechDraw_Tools_navi/de
- 15.87%    4.770      2 Template:Navigation_menu_2
- 13.30%    3.998      1 Template:Userdocnavi/de
- 12.96%    3.894      5 Template:VersionPlus/de
- 11.79%    3.544     25 Template:Version/de
- 10.81%    3.249      2 Template:Docnav/de
-  5.44%    1.636      1 Template:TOCright
-  4.28%    1.286      1 Template:KEY
+100.00%   27.620      1 -total
+ 40.32%   11.137      1 Template:TechDraw_Tools_navi/de
+ 28.24%    7.800      2 Template:Navigation_menu_2
+ 10.87%    3.002     25 Template:Version/de
+ 10.10%    2.789      1 Template:Userdocnavi/de
+  9.34%    2.580      2 Template:Docnav/de
+  8.61%    2.377      5 Template:VersionPlus/de
+  6.48%    1.791      1 Template:KEY
+  4.80%    1.325      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111211102 and revision id 1736378. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111211250 and revision id 1736386. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
