--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -675,10 +675,8 @@
 <p><span id="Touchpad_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_Touchpad">Navigace Touchpad</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>With the Touchpad navigation style, panning, zooming, and rotating the view require a modifier key together with the touchpad. This style can also be used with a mouse.
+<p>P&#345;i navigaci pomoc&iacute; touchpadu je pro posouv&aacute;n&iacute;, p&#345;ibli&#382;ov&aacute;n&iacute; a ot&aacute;&#269;en&iacute; zobrazen&iacute; nutn&eacute; pou&#382;&iacute;t modifika&#269;n&iacute; kl&aacute;vesu spole&#269;n&#283; s touchpadem. Tento styl lze pou&#382;&iacute;t tak&eacute; s my&scaron;&iacute;.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>V Touchpad Navigaci, bez sn&iacute;m&aacute;n&iacute;, zoomov&aacute;n&iacute;, a ot&aacute;&#269;en&iacute; pohledu, jsou pouze operace s my&scaron;&iacute; (nebo touchpadem).
 </p>
@@ -848,13 +846,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211131
+Cached time: 20260111211306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.306 seconds
-Real time usage: 0.436 seconds
-Preprocessor visited node count: 1468/1000000
+CPU time usage: 0.319 seconds
+Real time usage: 0.451 seconds
+Preprocessor visited node count: 1467/1000000
 Post&#8208;expand include size: 71676/2097152 bytes
 Template argument size: 26611/2097152 bytes
 Highest expansion depth: 7/100
@@ -864,19 +862,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.859      1 -total
- 11.67%    8.155      8 Template:ASCII
-  8.19%    5.720      1 Template:Userdocnavi/cs
-  8.08%    5.647     69 Template:KEY
-  7.86%    5.494      1 Template:OpenSCAD_Navigation
-  6.82%    4.764      1 Template:MayaGesture_Navigation
-  5.77%    4.033      1 Template:Blender_Navigation
-  5.50%    3.841      1 Template:OpenCascade_Navigation
-  4.68%    3.268      1 Template:OpenInventor_Navigation
-  4.63%    3.232      1 Template:Gesture_Navigation
+100.00%   76.143      1 -total
+ 15.57%   11.859      8 Template:ASCII
+ 11.01%    8.381      1 Template:Userdocnavi/cs
+  7.39%    5.630      1 Template:OpenSCAD_Navigation
+  4.88%    3.719      1 Template:SiemensNX_Navigation
+  4.83%    3.674      1 Template:SolidWorks_Navigation
+  4.56%    3.470      1 Template:Touchpad_Navigation/cs
+  4.46%    3.399     69 Template:KEY
+  4.45%    3.391      1 Template:Navigation_menu_2
+  3.92%    2.988      1 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211130 and revision id 1736382. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211306 and revision id 1736388. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
