--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -701,16 +701,14 @@
 </td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touchpad.svg&amp;filetimestamp=20181210232726&amp;.html" class="mw-file-description"><img src="../File/Touchpad.svg" decoding="async" width="71" height="71" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
 </td>
-<td style="width:15%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touchpad.svg&amp;filetimestamp=20181210232726&amp;.html" class="mw-file-description"><img src="../File/Touchpad.svg" decoding="async" width="71" height="71" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
-</div></td>
+<td style="width:15%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touchpad.svg&amp;filetimestamp=20181210232726&amp;.html" class="mw-file-description"><img src="../File/Touchpad.svg" decoding="async" width="71" height="71" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
+</td>
 <td style="width:15%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touchpad_LB_hold.svg&amp;filetimestamp=20181210235620&amp;.html" class="mw-file-description"><img src="../File/Touchpad_LB_hold.svg" decoding="async" width="71" height="71" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
 </td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touchpad.svg&amp;filetimestamp=20181210232726&amp;.html" class="mw-file-description"><img src="../File/Touchpad.svg" decoding="async" width="71" height="71" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, then move the pointer.
@@ -763,15 +761,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211347
+Cached time: 20260111211506
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.268 seconds
-Real time usage: 0.366 seconds
-Preprocessor visited node count: 1366/1000000
-Post&#8208;expand include size: 64216/2097152 bytes
-Template argument size: 27203/2097152 bytes
+CPU time usage: 0.328 seconds
+Real time usage: 1.012 seconds
+Preprocessor visited node count: 1365/1000000
+Post&#8208;expand include size: 64166/2097152 bytes
+Template argument size: 27153/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -779,19 +777,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.436      1 -total
- 13.23%    8.655      8 Template:ASCII
-  8.41%    5.504      1 Template:Userdocnavi/cs
-  6.54%    4.280      1 Template:Revit_Navigation
-  6.15%    4.024     54 Template:KEY
-  6.14%    4.015      1 Template:OpenSCAD_Navigation
-  5.70%    3.733      2 Template:Button
-  5.31%    3.476      9 Template:MenuCommand
-  4.89%    3.199      1 Template:SiemensNX_Navigation
-  4.80%    3.140      1 Template:SolidWorks_Navigation
+100.00%  219.600      1 -total
+ 18.48%   40.587      1 Template:Userdocnavi/cs
+ 11.88%   26.091      1 Template:Touchpad_Navigation
+  8.38%   18.404      1 Template:OpenSCAD_Navigation
+  8.09%   17.767      8 Template:ASCII
+  7.52%   16.519      1 Template:CAD_Navigation
+  6.71%   14.746      1 Template:Gesture_Navigation
+  6.61%   14.509      1 Template:MayaGesture_Navigation
+  4.90%   10.754      1 Template:TinkerCAD_Navigation
+  4.27%    9.368      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211346 and revision id 1736392. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211505 and revision id 1736400. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
