--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -713,15 +713,11 @@
 <td>Podr&#382;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a pot&eacute; p&#345;esu&#328;te ukazatel my&scaron;i.
 </td>
 <td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a p&#345;esu&#328;te ukazatel my&scaron;i.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the left button, then move the pointer.
+<p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a lev&eacute; tla&#269;&iacute;tko a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>, then move the pointer.
+</td>
+<td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="Hardware_support"></span>
 </p>
 <h2><span class="mw-headline" id="Podpora_hardwaru">Podpora hardwaru</span></h2>
@@ -757,15 +753,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211554
+Cached time: 20260111211647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.254 seconds
-Real time usage: 0.323 seconds
-Preprocessor visited node count: 1363/1000000
-Post&#8208;expand include size: 64092/2097152 bytes
-Template argument size: 27079/2097152 bytes
+CPU time usage: 0.269 seconds
+Real time usage: 0.386 seconds
+Preprocessor visited node count: 1361/1000000
+Post&#8208;expand include size: 64014/2097152 bytes
+Template argument size: 27001/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -773,19 +769,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.557      1 -total
- 15.63%    8.999      8 Template:ASCII
- 13.12%    7.552      1 Template:Userdocnavi/cs
-  8.07%    4.643      1 Template:OpenSCAD_Navigation
-  5.68%    3.271      1 Template:Gesture_Navigation
-  5.53%    3.184      1 Template:OpenInventor_Navigation
-  5.32%    3.065     54 Template:KEY
-  4.85%    2.789      1 Template:MayaGesture_Navigation
-  4.67%    2.686      1 Template:Navigation_menu_2
-  4.30%    2.477      1 Template:Blender_Navigation
+100.00%   78.085      1 -total
+ 15.91%   12.421      8 Template:ASCII
+  9.30%    7.260      1 Template:Userdocnavi/cs
+  6.49%    5.069      1 Template:SiemensNX_Navigation
+  6.40%    4.994      1 Template:Blender_Navigation
+  5.55%    4.336      1 Template:Touchpad_Navigation
+  5.24%    4.094      1 Template:OpenSCAD_Navigation
+  4.28%    3.344      1 Template:Gesture_Navigation
+  4.23%    3.305      1 Template:SolidWorks_Navigation
+  4.17%    3.257     54 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211554 and revision id 1736419. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211646 and revision id 1736425. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
