--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -76,7 +76,7 @@
 </p>
 <ol><li>Eine Mittellinie ausw&auml;hlen.</li>
 <li>Ein beliebiges Mittellinienwerkzeug aufrufen.</li>
-<li>Ein Dialogfeld wird ge&ouml;ffnet. Siehe <a href="#Optionen">Optionen</a> f&uuml;r Weitere Informationen.</li>
+<li>Ein Dialogfeld wird ge&ouml;ffnet. Siehe <a href="#Options">Optionen</a> f&uuml;r Weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> zum Best&auml;tigen dr&uuml;cken.</li></ol>
 <p><span id="Options"></span>
 </p>
@@ -156,12 +156,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211634
+Cached time: 20260111211651
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.096 seconds
-Real time usage: 0.144 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 408/1000000
 Post&#8208;expand include size: 29067/2097152 bytes
 Template argument size: 11233/2097152 bytes
@@ -172,19 +172,19 @@ Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.669      1 -total
- 22.12%    6.784      1 Template:TechDraw_Tools_navi/de
- 14.77%    4.529      2 Template:PropertyView/de
- 13.40%    4.111      2 Template:Navigation_menu_2
- 11.70%    3.587      2 Template:Docnav/de
- 11.58%    3.551      1 Template:GuiCommand/de
-  7.00%    2.147      3 Template:Button
-  6.94%    2.127      1 Template:Version/de
-  6.66%    2.044      1 Template:Caption
-  6.51%    1.996      1 Template:Userdocnavi/de
+100.00%   28.616      1 -total
+ 25.15%    7.196      1 Template:TechDraw_Tools_navi/de
+ 15.58%    4.458      2 Template:PropertyView/de
+ 13.49%    3.860      2 Template:Navigation_menu_2
+ 11.67%    3.339      1 Template:Version/de
+  9.80%    2.804      2 Template:Docnav/de
+  8.34%    2.386      1 Template:GuiCommand/de
+  8.20%    2.347      1 Template:Userdocnavi/de
+  5.28%    1.510      2 Template:Variable
+  5.19%    1.486      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211634 and revision id 1736423. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211651 and revision id 1736427. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
